@startuml clases

class Trabajador {
    # Monitor monitor
    # int[][] transiciones
    + disparos (  )    
}

class Capataz {
    + run (  )    
}

class Pasante {
    + run (  )    
}

class Operario {
    + run (  )    
}

class Politica {
    + int decisionRandom ( int[] )
    + int decision ( int[] )
    + int decisionCompleja ( int[], int[], int[] )
}

class Tiempo {
    - int[] transicionesTemporizadas
    - double[] tiempoDeSensibilizado
    - double[] alfas
    - double[] betas
    - double[] q
    - double[] tiempoInvariantes
    + actualizarQ ( int )
    + sensibilizarTiempo ( int )
    + resetTiempo ( int )
    + boolean enVentana ( int )
    + int[] getTransicionesTemporizadas (  )
    + double calcularTiempoRestante ( int )
    + double[] getTiempoMinInvariantes (  )
    + double[] getTiempoDeSensibilizado (  )
    + double[] getAlfas (  )
}

class Log {
    - String output
    - Log instance
    + Log getInstance (  )
    + escribirLog ( String )
    + writeFile (  )
}

class RedDePetri {
    - int[] marcado
    - int[] pInvariantesVal
    - int[][] pInvariantesPlazas
    - int[][] matrizIncidencia
    - int[] tSensibilizadas
    - int[] mapaTransicionesInvariantes
    - Log log
    - Tiempo tiempo
    + boolean disparar ( int[] )
    + int[] getTransicionesSensibilizadas (  )
    + int getCantidadTransiciones (  )
    + int[] getMapaTransicionesInvariantes (  )
    + boolean estaSensibilizada ( int[] )
    + boolean checkPInvariantes (  )
    - boolean evaluarDisparo ( int[] )
    - calcularNuevoEstado ( int[] )
    - calcularSensibilizadas (  )
    - int getMarcadoPlaza ( int )
    - int traducirTransicion ( int[] )
    - int getSumaInvariante ( int[] )
}

class RdPInit {
    - int[] pInvariantesVal
    - int[][] pInvariantesPlazas
    - int[][] matrizIncidencia
    - int[] m0
    - int[] tSensibilizadas0
    - int[][] transiciones
    - int[] transicionAInvariante
    - int[] temporizadas
    - double[] alfas
    - double[] betas
    + int[] getpInvariantesVal(  )
    + int[][] getpInvariantesPlazas(  )
    + int[][] getMatrizIncidencia(  )
    + int[] getM0(  )
    + int[] gettSensibilizadas0(  )
    + int[][] getTransiciones(  )
    + int[] getTransicionAInvariante(  )
    + int[] getTemporizadas(  )
    + double[] getAlfas(  )
    + double[] getBetas(  )
}

class Monitor {
    - Semaphore mutexMonitor
    - Semaphore[] colas
    - RedDePetri rdp
    - Politica politica
    - Tiempo tiempo
    - int nTransicionesRed
    - int[] tInvariantes
    - int interrumpidos
    + disparar ( int[] )
    + boolean seguirDisparando (  )
    + addInvariante ( int[] )
    + getResultados (  )
    - int[] obtenerVectorM (  )
    - boolean signal (  )
    - colaCondicion ( int[] )
    - dormir ( int[] )
    - int traducirTransicion ( int[] )
    - getTiempoTotalInvariantes (  )
    - String formatDoubleString ( double )
}

class Semaphore {
    + acquire (  )
    + release (  )
}

class Thread {
    + start (  )
    + join (  )
    + sleep ( long )
}

interface Runnable

class FileWriter

class PrintWriter

Monitor -> Semaphore
Monitor -> Politica
RedDePetri <- Monitor

Runnable <|-. Capataz
Runnable <|-. Operario
Runnable <|-. Pasante
Runnable <|-. Thread

Trabajador <|-- Capataz
Trabajador <|-- Operario
Trabajador <|-- Pasante

Capataz --> Monitor
Pasante --> Monitor
Operario --> Monitor

RedDePetri --> Tiempo
Monitor --> Tiempo
Tiempo -> RdPInit

Log --> Log
Log -> PrintWriter
FileWriter <-- Log
Log <-- RedDePetri

RedDePetri -> RdPInit

@enduml